# Verbinition

./: .gitignore  README.md  __init__.py  agent_probe.py  continuation_handoff.md  day1.md  day2.md  day3.md  handoff.md  option_b.md  pyproject.toml  smoke_test_nla.py
scripts/: build_av_sft_dataset.py  compare_nla_results.py  merge_av_lora.py  run_mcp_probe.py  train_av_lora.py
src/vac/: __init__.py
src/vac/agent/: __init__.py  extraction.py  generated_battery.py  harness.py  scenarios.py
src/vac/nla/: __init__.py  injection.py
src/vac/tools/: __init__.py  local_tools.py  mcp_server.py
