[project]
name = "vac"
version = "0.1.0"
description = "Verbalizing Hidden Cognition in Tool-Using Agents"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "transformers>=4.45",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "pyarrow>=17.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "orjson>=3.10",
]

[project.optional-dependencies]
# AV serving via SGLang (needed for NLA inference). Keep this exact: newer
# SGLang stacks have different pinned serving dependencies.
sglang = ["sglang==0.5.6"]
# Agent harness with MCP tools (D4+)
agent = ["mcp>=1.0"]
# LoRA fine-tuning of the AV (D15+)
train = ["peft>=0.13", "datasets>=3.0"]
dev = ["ruff>=0.6", "pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
